--- a/js相关/proxy/index.html
+++ b/js相关/proxy/index.html
@@ -9,8 +9,6 @@
 <body>
     
 </body>
-
-
-<script src="./深拷贝1.js"></script>
-<!-- <script src="./深拷贝2.js"></script> -->
 </html>
+
+<script src="./proxy.js"></script>
