fix: 立即执行函数作用域更新

--- a/js相关/预编译_作用域_闭包/index.html
+++ b/js相关/预编译_作用域_闭包/index.html
@@ -11,6 +11,6 @@
 </body>
 
 <script src="./预编译.js"></script>
-<script src="./作用域(链).js"></script>
-<script src="./闭包.js"></script>
+<!-- <script src="./作用域(链).js"></script> -->
+<!-- <script src="./闭包.js"></script> -->
 </html>
