--- a/js相关/Promise/index.html
+++ b/js相关/Promise/index.html
@@ -13,6 +13,8 @@
 </body>
 
 
-<script src="./promise初认识.js">7</script>
-<script src="./手写promise.js"></script>
+<!-- <script src="./promise初认识.js">7</script> -->
+<!-- <script src="./手写promise.js"></script> -->
+
+<script src="./手写all.js"></script>
 </html>
